--- a/examples/1D_optimization_example.ipynb
+++ b/examples/1D_optimization_example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,17 +182,17 @@
      "output_type": "stream",
      "text": [
       "gaft.ConsoleOutput   INFO     Generation number: 50 Population number: 50\n",
-      "gaft.ConsoleOutput   INFO     Generation: 1, best fitness: 14.893, scaled fitness: 14.893\n",
-      "gaft.ConsoleOutput   INFO     Generation: 2, best fitness: 15.056, scaled fitness: 15.056\n",
-      "gaft.ConsoleOutput   INFO     Generation: 3, best fitness: 15.103, scaled fitness: 15.103\n",
-      "gaft.ConsoleOutput   INFO     Generation: 4, best fitness: 15.103, scaled fitness: 15.103\n",
+      "gaft.ConsoleOutput   INFO     Generation: 1, best fitness: 15.136, scaled fitness: 15.136\n",
+      "gaft.ConsoleOutput   INFO     Generation: 2, best fitness: 15.136, scaled fitness: 15.136\n",
+      "gaft.ConsoleOutput   INFO     Generation: 3, best fitness: 15.136, scaled fitness: 15.136\n",
+      "gaft.ConsoleOutput   INFO     Generation: 4, best fitness: 15.136, scaled fitness: 15.136\n",
       "gaft.ConsoleOutput   INFO     Generation: 5, best fitness: 15.154, scaled fitness: 15.154\n",
-      "gaft.ConsoleOutput   INFO     Generation: 6, best fitness: 15.161, scaled fitness: 15.161\n",
-      "gaft.ConsoleOutput   INFO     Generation: 7, best fitness: 15.161, scaled fitness: 15.161\n",
-      "gaft.ConsoleOutput   INFO     Generation: 8, best fitness: 15.161, scaled fitness: 15.161\n",
-      "gaft.ConsoleOutput   INFO     Generation: 9, best fitness: 15.161, scaled fitness: 15.161\n",
-      "gaft.ConsoleOutput   INFO     Generation: 10, best fitness: 15.161, scaled fitness: 15.161\n",
-      "gaft.ConsoleOutput   INFO     Generation: 11, best fitness: 15.161, scaled fitness: 15.161\n",
+      "gaft.ConsoleOutput   INFO     Generation: 6, best fitness: 15.154, scaled fitness: 15.154\n",
+      "gaft.ConsoleOutput   INFO     Generation: 7, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 8, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 9, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 10, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 11, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 12, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 13, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 14, best fitness: 15.164, scaled fitness: 15.164\n",
@@ -232,7 +232,7 @@
       "gaft.ConsoleOutput   INFO     Generation: 48, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 49, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 50, best fitness: 15.164, scaled fitness: 15.164\n",
-      "gaft.ConsoleOutput   INFO     Optimal solution: ([0.892333984375], 15.164338102247847)\n"
+      "gaft.ConsoleOutput   INFO     Optimal solution: ([0.8935546875], 15.163825486392565)\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## After engine running, we can something more..."
+    "## After engine running, we can do something more..."
    ]
   },
   {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,21 +267,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the solution"
+    "### Get the solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.892333984375]"
+       "[0.8935546875]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,21 +294,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## And the fitness value"
+    "### And the fitness value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15.164338102247847"
+       "15.163825486392565"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
