Remove verbosity parameters.

--- a/examples/1D_optimization_example.ipynb
+++ b/examples/1D_optimization_example.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "from gaft.components import BinaryIndividual\n",
-    "indv = BinaryIndividual(ranges=[(0, 10)], eps=0.001, verbosity=0)"
+    "indv = BinaryIndividual(ranges=[(0, 10)], eps=0.001)"
    ]
   },
   {
@@ -182,12 +182,12 @@
      "output_type": "stream",
      "text": [
       "gaft.ConsoleOutput   INFO     Generation number: 50 Population number: 50\n",
-      "gaft.ConsoleOutput   INFO     Generation: 1, best fitness: 15.136, scaled fitness: 15.136\n",
-      "gaft.ConsoleOutput   INFO     Generation: 2, best fitness: 15.136, scaled fitness: 15.136\n",
-      "gaft.ConsoleOutput   INFO     Generation: 3, best fitness: 15.136, scaled fitness: 15.136\n",
-      "gaft.ConsoleOutput   INFO     Generation: 4, best fitness: 15.136, scaled fitness: 15.136\n",
-      "gaft.ConsoleOutput   INFO     Generation: 5, best fitness: 15.154, scaled fitness: 15.154\n",
-      "gaft.ConsoleOutput   INFO     Generation: 6, best fitness: 15.154, scaled fitness: 15.154\n",
+      "gaft.ConsoleOutput   INFO     Generation: 1, best fitness: 15.077, scaled fitness: 15.077\n",
+      "gaft.ConsoleOutput   INFO     Generation: 2, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 3, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 4, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 5, best fitness: 15.164, scaled fitness: 15.164\n",
+      "gaft.ConsoleOutput   INFO     Generation: 6, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 7, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 8, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 9, best fitness: 15.164, scaled fitness: 15.164\n",
@@ -232,7 +232,7 @@
       "gaft.ConsoleOutput   INFO     Generation: 48, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 49, best fitness: 15.164, scaled fitness: 15.164\n",
       "gaft.ConsoleOutput   INFO     Generation: 50, best fitness: 15.164, scaled fitness: 15.164\n",
-      "gaft.ConsoleOutput   INFO     Optimal solution: ([0.8935546875], 15.163825486392565)\n"
+      "gaft.ConsoleOutput   INFO     Optimal solution: ([0.892333984375], 15.164338102247847)\n"
      ]
     }
    ],
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "[0.8935546875]"
+       "[0.892333984375]"
       ]
      },
      "execution_count": 11,
@@ -305,7 +305,7 @@
     {
      "data": {
       "text/plain": [
-       "15.163825486392565"
+       "15.164338102247847"
       ]
      },
      "execution_count": 12,
